# softwaresy

./: README.md  diagnosis.sh  global.cpp  global.h  guiinterface.cpp  guiinterface.h  main.cpp  maincontrol.cpp  maincontrol.h  pubdef.h  qml.qrc  res.qrc  sy3-dev.pro  sync_robot_time.sh  system.ini  命令行参数说明.txt
Comm/: baseclient.cpp  baseclient.h  devserver.cpp  devserver.h  realtimemonclient.cpp  realtimemonclient.h
DBModels/: dbmodelbase.cpp  dbmodelbase.h  dbmodels.h
DeviceControl/: bedcontrol.cpp  bedcontrol.h  cameracontrol.cpp  cameracontrol.h  robotcontrol.cpp  robotcontrol.h
MultiTask/: cameragetdataworker.cpp  cameragetdataworker.h  coreprocedureworker.cpp  coreprocedureworker.h
NewUISet/: About.qml  AddPatientInfo.qml  AppointmentView.qml  Bedctl.qml  Blocking.qml  Calibrate.qml  CureList.qml  CurePage.qml  CureRecord.qml  DevMaintain.qml  DevOps.qml  DevOthers.qml  Diagnosis.qml  Entry.qml  FormulaPage.qml  FormulaPageEdit.qml  Home.qml  IdentifyReuslt.qml  InfoPage.qml  JingLuoMenu.qml  Loading.qml  Login.qml  PatientManage.qml  PatientManageRowEdit.qml  RTCamView.qml  RTIdentifyResult.qml  Robotctl.qml  Settings.qml  Tips.qml  UserManage.qml  UserManageRowEdit.qml  Warning.qml
Other/: ImageProvider.cpp  ImageProvider.h  Logger.cpp  Logger.h  LoggerTemplate.h  ShowImage.cpp  ShowImage.h  frameprovider.cpp  frameprovider.h  myfile.cpp  myfile.h  mysignalspy.cpp  mysignalspy.h
Tools/: search_depth.py  search_depth.sh  testCure.py
camprocess/kinect/src/: CMakeLists.txt  cam_process.cpp
camprocess/orbbec/src/: CMakeLists.txt  cam_process.cpp
(+45 files in other folders)
